# dachsb0t

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: channels.rs  main.rs
crates/core/src/channels/: distributor.rs  twitch.rs  websocket.rs
crates/core/src/channels/distributor/: distributor.rs
crates/core/src/channels/twitch/: twitch.rs
crates/core/src/features/: announce.rs
crates/features/: Cargo.toml
crates/features/src/: announce.rs  echo.rs  lib.rs  meme.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: action.rs  event.rs  lib.rs  plugin.rs
src/: channels.rs  features.rs  main.rs
src/channels/: websocket.rs
src/channels/twitch/: twitch.rs
src/features/: announce.rs
