[package]
name = "dachsb0t-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dachsb0t-plugin = { path = "../plugin" }
dachsb0t-features = { path = "../features" }

async-trait = "0.1.52"
futures-channel = "0.3.21"
futures-util = "0.3.21"
once_cell = "1.9.0"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
tracing = { version = "0.1.30", features = ["log"] }
url = "2.2.2"
